# RINS-beta-robot

./: README.md  frames_2025-04-27_13.50.00.gv  frames_2025-04-27_14.22.44.gv  frames_2025-05-16_19.28.26.gv
install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
install/dis_tutorial3/lib/dis_tutorial3/: detect_people1.py  detect_rings.py  robot_commander.py  skeletonized_path.py
install/dis_tutorial3/share/dis_tutorial3/: package.sh
install/dis_tutorial3/share/dis_tutorial3/launch/: sim_turtlebot_nav.launch.py
install/dis_tutorial3/share/dis_tutorial3/scripts/: robot_pos.txt
log/: latest_build
map/: map.pgm  map.yaml  map1.pgm  map1.yaml  mapOld.pgm  map_cleaned_real.pgm  map_path_points_real.pgm  map_skeleton_proba_real.pgm  map_skeleton_real.pgm
src/dis_tutorial3/: CMakeLists.txt  README.md  command
src/dis_tutorial3/launch/: sim_turtlebot_slam.launch.py  skeletonized_path.launch.py
src/dis_tutorial3/maps/: map.yaml  map1.pgm  map_cleaned.pgm  map_path_points.pgm  map_skeleton_proba.pgm
src/dis_tutorial3/scripts/: detect_people.py  detect_people1.py  faces_pos.txt  rings_mask.py  robot_commander.py  robot_commander1.py  robot_commander2.py  robot_commander_old.py  robot_commander_prez1.py  robot_commander_v0.py  skeletonized_path.py  speak.py  transform_point.py
